--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2"
+    "@types/react-dom": "^19.0.2",
+    "tailwindcss": "^3.4.17"
   },
   "resolutions": {
     "@typescript-eslint/typescript-estree": "^5.0.0"
