--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.9",
     "cra-template-pwa-typescript": "2.0.0",
     "react": "^18.2.0",
+    "react-camera-pro": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
