--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "cra-template-pwa-typescript": "2.0.0",
+    "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-camera-pro": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "three": "^0.171.0",
