--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-camera-pro": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1",
+    "react-pdf": "^9.2.1",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "three": "^0.171.0",
