--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "cra-template-pwa-typescript": "2.0.0",
+    "lucide-react": "^0.471.0",
     "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-camera-pro": "^1.4.0",
