--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^14.5.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "canvas-confetti": "^1.9.3",
     "cra-template-pwa-typescript": "2.0.0",
     "lucide-react": "^0.471.0",
     "postcss": "^8.4.49",
