--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-camera-pro": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "three": "^0.171.0",
     "web-vitals": "^4.2.4"
@@ -56,6 +58,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/three": "^0.171.0",
     "tailwindcss": "^3.4.17"
   },
